add log request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
